<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/button0"
			style="@style/CustomButton"
			android:layout_width="match_parent"
			android:layout_height="64dp"
			android:layout_marginTop="64dp"
			android:text="@string/check_server"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/button1"
			style="@style/CustomButton"
			android:layout_width="match_parent"
			android:layout_height="64dp"
			android:layout_marginTop="16dp"
			android:text="@string/polling_http"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/button0" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/button2"
			style="@style/CustomButton"
			android:layout_width="match_parent"
			android:layout_height="64dp"
			android:layout_marginTop="16dp"
			android:text="@string/websocket"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/button1" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>